--- a/PaiPaiGO/Views/Home/Index.cshtml
+++ b/PaiPaiGO/Views/Home/Index.cshtml
@@ -1,8 +1,131 @@
-﻿@{
+﻿@using PaiPaiGO.Models;
+@using System.Data.SqlClient;
+
+@{
     ViewData["Title"] = "Home Page";
 }
+<!-- Views/Home/ShowNotifications.cshtml -->
+@model List<Task>
+
+<h2>未完成的任務通知</h2>
+
+@if (Model?.Count > 0)
+{
+    <p>您有未完成的任務：</p>
+    <ul>
+        @foreach (var task in Model)
+        {
+            <li>@task.AsyncState</li>
+        }
+    </ul>
+}
+else
+{
+    <p>目前沒有未完成的任務。</p>
+}
+
+
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+
+<p>@ViewBag.Miss</p>
+
+<!-- Button trigger modal -->
+@*<div class="timee" id="countdown-icon" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="getYourData()">
+    <img src="~/img/time3.png" style="width: 50px; height: 50px;" alt="倒數計時">
+</div>*@
+
+<!-- Modal -->
+@*<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">任務倒數時間</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-dialog modal-dialog-centered" id="remainingTimeContainer">
+                
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>*@
+
+
+<!-- Include jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
+
+@*<script>
+    function updateRemainingTime(data) {
+        // 更新剩餘時間
+        $('#remainingTimeContainer').html(data);
+    }
+
+    // 按鈕點擊後執行 AJAX 請求
+    function getYourData() {
+        $.ajax({
+            url: '@Url.Action("RemainingTimePartial", "Home")',
+            type: 'GET',
+            success: function (data) {
+                if (data != null) {
+                    // 更新剩餘時間
+                    updateRemainingTime(data);
+
+                    // 每秒更新一次剩餘時間
+                    setInterval(function () {
+                        $.ajax({
+                            url: '@Url.Action("RemainingTimePartial", "Home")',
+                            type: 'GET',
+                            success: function (updatedData) {
+                                if (updatedData != null) {
+                                    // 更新剩餘時間
+                                    updateRemainingTime(updatedData);
+                                } else {
+                                    alert('No updated data received.');
+                                }
+                            },
+                            error: function () {
+                                alert('An error occurred while fetching updated data.');
+                            }
+                        });
+                    }, 1000);
+                } else {
+                    alert('No data received.');
+                }
+            },
+            error: function () {
+                alert('An error occurred while fetching data.');
+            }
+        });
+    }
+</script>
+*@
+
+
+@*<script>
+    function FirstOrDefault() {
+        // 發送 AJAX 請求到後端控制器動作
+
+        $.ajax({
+            url: '@Url.Action("Index", "Home")',
+            type: 'GET',
+            success: function (data) {
+                // 更新前端視圖中的值
+                //$('#RemainingTime').text(data.RemainingTime);
+                alert(data.RemainingTime);
+            },
+
+            error: function () {
+                alert('An error occurred while fetching data.');
+            }
+
+        });
+    }
+</script>*@
