--- a/PaiPaiGO/Views/HS_Pending/CheckOrder_Pai.cshtml
+++ b/PaiPaiGO/Views/HS_Pending/CheckOrder_Pai.cshtml
@@ -103,7 +103,7 @@
             <div class="col-md-1">
             </div>
         </div>
-        <div>
+        <div style="display:none">
     
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
