--- a/PaiPaiGO/Views/HS_Pending/CheckOrder_Buy.cshtml
+++ b/PaiPaiGO/Views/HS_Pending/CheckOrder_Buy.cshtml
@@ -106,7 +106,7 @@
         <div class="col-md-1">
         </div>
     </div>
-    <div >
+    <div style="display:none">
     
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
