--- a/PaiPaiGO/Views/HS_Pending/PendingOrder_Buy.cshtml
+++ b/PaiPaiGO/Views/HS_Pending/PendingOrder_Buy.cshtml
@@ -19,8 +19,8 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js"
             integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
             crossorigin="anonymous"></script>
-    <script src="./js/jquery.twzipcode.js"></script>
-    <script src="./js/twzipcode.js"></script>
+    <script src="~/jQuery-TWzipcode-master/jquery.twzipcode.js"></script>
+    <script src="~/jQuery-TWzipcode-master/twzipcode.js"></script>
   
 </head>
 <style>
