1013下課前最後微調

--- a/PaiPaiGO/Views/Shared/_Layout.cshtml
+++ b/PaiPaiGO/Views/Shared/_Layout.cshtml
@@ -313,10 +313,8 @@
 
 
 
-    <div class="container">
-        <main role="main" class="pb-3">
+    <div>
             @RenderBody()
-        </main>
     </div>
 
     <div class="border-top footer footer-expand-lg">
