--- a/PaiPaiGO/Views/YU_Home/Index.cshtml
+++ b/PaiPaiGO/Views/YU_Home/Index.cshtml
@@ -293,7 +293,7 @@
                 </a>
             </div>
             <div class="bdimg">
-                <img src="./img/Home1.png" style="width:1200px; height:655px;" alt="尚未放入圖片">
+                <img src="~/img/Home1.png" style="width:1200px; height:655px;" alt="尚未放入圖片">
             </div>
 
         </div>
@@ -315,7 +315,7 @@
                 </div>
                 &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
                 <div class="item">
-                    <img src="./img/map1.png" alt="尚未放入圖片">
+                    <img src="~/img/map1.png" alt="尚未放入圖片">
                     <p><a href="#">選擇地點</a></p>
                 </div>
                 &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
