1015_10:35 確認功能皆正常

--- a/PaiPaiGO/Views/CC_Members/SetPassword.cshtml
+++ b/PaiPaiGO/Views/CC_Members/SetPassword.cshtml
@@ -47,7 +47,7 @@
                 <button class="rounded mt-3 border-0 w-100  bg-info fs-5" type="submit">確認修改</button>
             </form>
         </div>
-        @*        錯誤訊息: @Html.ValidationSummary()*@
+                錯誤訊息: @Html.ValidationSummary()
     </div>
 </div>
 
