--- a/PaiPaiGO/Views/CC_Members/MemberProfile.cshtml
+++ b/PaiPaiGO/Views/CC_Members/MemberProfile.cshtml
@@ -39,7 +39,7 @@
                 <div>
                     <div class="col-md-12 mt-1">
                         <label for="inputPassword" class="form-label fs-5" onclick="PasswordChange()">舊密碼</label>
-                        <input type="password" class="form-control" id="inputPassword">
+                        <input type="password" class="form-control" id="inputPassword" name="oldPassword">
                         <span id="CC_passwordcheck"></span>
                     </div>
                     <div class="col-md-12 mt-1">
@@ -82,7 +82,7 @@
                 <input asp-for="MemberId" value="@ViewBag.ID" />
 				<input asp-for="MemberPassword" id="MemberPassword" value="@ViewBag.password" />
             </div>
-
+			
 			<!-- SEND -->
             <button class="rounded mt-3 border-0 w-100 fs-5" style="background-color:deepskyblue;" type="submit">確認修改會員資料</button>
         </form>
@@ -93,7 +93,7 @@
 <sapn id="cc_sapn" class="invalid-feedback">@ViewBag.MemberCity</sapn>
 <sapn id="cc_sapn2" class="invalid-feedback">@ViewBag.Township</sapn>
 
-@*修改成功通知*@
+@*修改成功&失敗通知*@
 <div class="modal fade" id="ChangeModal" tabindex="-1" role="dialog" aria-labelledby="loginFailureModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
         <div class="modal-content">
@@ -104,7 +104,18 @@
         </div>
     </div>
 </div>
+<div class="modal fade" id="ChangeModal2" tabindex="-1" role="dialog" aria-labelledby="loginFailureModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div class="d-flex justify-content-center"><img src="~/img/CC_check.png" style="height:100px;" /></div>
+                <p class="text-center fs-5">會員資料修改失敗，請再次確認輸入資料</p>
+            </div>
+        </div>
+    </div>
+</div>
 <script>
+    console.log(@TempData["Message"])
     //縣市區域下拉選單
     $("#TWAddress").twzipcode({
         "css": ["city form-control", "town form-control", "zipcode form-control"],
@@ -141,17 +152,6 @@
         document.getElementById('inputPassword3').value = "pin654321";
     }
     //密碼驗證
-    $("#inputPassword").blur(function () {
-        var oldPassword = $(this).val();
-        var errorMessage = "舊密碼輸入錯誤。";
-        if (oldPassword !== dbPassword) {
-            $(this).addClass("is-invalid");
-            $("#CC_passwordcheck").text(errorMessage).addClass("text-danger", "fs-6");
-        } else {
-            $(this).removeClass("is-invalid");
-            $("#CC_passwordcheck").text("").removeClass("text-danger");
-        }
-    });
     $("#inputPassword2").blur(function () {
         var newPassword = $(this).val();
         var regex = /^(?=.*[a-zA-Z])(?=.*[0-9])[a-zA-Z0-9]{8,20}$/;
@@ -184,14 +184,6 @@
         var newPassword = $("#inputPassword2").val();
         var confirmPassword = $("#inputPassword3").val();
         if (oldPassword != ""){
-           // 檢查舊密碼是否正確
-            if (oldPassword !== dbPassword) {
-                var errorMessage = "舊密碼輸入錯誤。123"
-                e.preventDefault(); // 防止表單提交
-                $("#inputPassword").addClass("is-invalid");
-                $("#inputPassword3").addClass("is-invalid");
-                $("#CC_passwordcheck").text(errorMessage).addClass("text-danger", "fs-6");
-            }
 
             // 檢查新密碼是否符合正則表達式
             var regex = /^(?=.*[a-zA-Z])(?=.*[0-9])[a-zA-Z0-9]{8,20}$/;
@@ -215,11 +207,19 @@
 </script>
 
 
-@if (ViewBag.Change == "修改成功") {
+@if (@ViewBag.Change == "修改成功") {
 	<script>
 		$(document).ready(function () {
 			$('#ChangeModal').modal('show');
 		@*顯示 Modal*@
 					});
 	</script>
+}
+else if (@ViewBag.Change == "修改失敗"){
+    <script>
+        $(document).ready(function () {
+            $('#ChangeModal2').modal('show');
+        @*顯示 Modal*@
+                            });
+    </script>
 }
