--- a/PaiPaiGO/Views/HS_Get_Text/GetOrder_Buy.cshtml
+++ b/PaiPaiGO/Views/HS_Get_Text/GetOrder_Buy.cshtml
@@ -16,6 +16,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"></script>
+            @* 地圖API *@
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVc0hKUxRv8PWCCNNhMsf7m_ZwIoivCZg"></script>
 </head>
 <style>
     .capsule-button {
@@ -54,55 +56,58 @@
 </style>
 
 <body>
-        <div class="row" style="padding-top: 20px;">
-            <div class="col-md-1"></div>
-            <div class="col-md-10" style="background-color: #CDF4D1;">
-                <div class="row">
-                    <!-- 左邊 -->
-                    <div class="col-md-6" style="font-size: 25px;padding-left: 40px;">
-                        <strong>
-                            <p style="color: #176D6B;padding-top: 30px;">代購</p>
-                        </strong>
-                        <h1>@TempData["BuyMissionName"]</h1>
-                        <div style="color: gray;">
-                            <span>發布時間:</span>
-                            <span>@TempData["BuyOrderTime"]</span>
-                        </div>
-                        <!-- 任務內容 OK-->
-                        <div style="position: relative; width: 400px;">
-                            <div style="position: absolute; top: 50px; left: -5px;background-color: #CDF4D1; padding: 5px; height: 20px;">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-clipboard"
-                                     width="20" height="20" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
-                                     fill="none" stroke-linecap="round" stroke-linejoin="round"
-                                     style="display: inline-block; vertical-align: middle; margin-right: -7px; margin-top: -15px;background-color: #CDF4D1;">
-                                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                                    <path d="M9 5h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2h-2" />
-                                    <path d="M9 3m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v0a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" />
-                                </svg>
-                                <p style="display: inline-block; vertical-align: middle;background-color: #CDF4D1;">代購內容:</p>
-                            </div>
-                            <br><br>
-                            <div style="border: 1px solid #000; padding: 5px; box-sizing: border-box; overflow: auto;">
-                                <textarea style="width: 100%; height: 150px; border: none;background-color: #CDF4D1;">
-                                                                    @TempData["BuyMissionDescription"]
-            </textarea>
-                                <!-- 添加一个可以放置图片的空间 -->
-                                <div style="margin-top: 10px;">
-                                    <!-- 在这里放置图片 -->
-                                <img src="data:image/jpeg;base64,@TempData["BuyImageData"]" alt="Uploaded Image" style="width:150px" />
-                                </div>
-                            </div>
-                        </div>
-                        <br><br>
+    <div class="row" style="padding-top: 20px;">
+        <div class="col-md-1"></div>
+        <div class="col-md-10" style="background-color: #CDF4D1;">
+            <div class="row">
+                <!-- 左邊 -->
+                <div class="col-md-6" style="font-size: 25px;padding-left: 40px;">
+                    <strong>
+                        <p style="color: #176D6B;padding-top: 30px;">代購</p>
+                    </strong>
+                    <h1>@TempData["BuyMissionName"]</h1>
+                    <div style="color: gray;">
+                        <span>發布時間:</span>
+                        <span>@TempData["BuyOrderTime"]</span>
                     </div>
-                    <!-- 右邊 -->
-                    <div class="col-md-6" style="font-size: 25px;">
-                        <!-- 標籤 -->
-                        <div style="padding-top: 90px;padding-left: 370px;">
-                            <button class="capsule-button"><strong>#@TempData["BuyTags"]</strong></button>
+                    <!-- 任務內容 OK-->
+                    <div style="position: relative; width: 400px;">
+                        <div style="position: absolute; top: 50px; left: -5px;background-color: #CDF4D1; padding: 5px; height: 20px;">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-clipboard"
+                                 width="20" height="20" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
+                                 fill="none" stroke-linecap="round" stroke-linejoin="round"
+                                 style="display: inline-block; vertical-align: middle; margin-right: -7px; margin-top: -15px;background-color: #CDF4D1;">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                <path d="M9 5h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2h-2" />
+                                <path d="M9 3m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v0a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" />
+                            </svg>
+                            <p style="display: inline-block; vertical-align: middle;background-color: #CDF4D1;">代購內容:</p>
                         </div>
                         <br><br>
-                        <!-- 截止時間 -->
+                        <div style="border: 1px solid #000; padding: 5px; box-sizing: border-box; overflow: auto;">
+                            <textarea style="width: 100%; height: 150px; border: none;background-color: #CDF4D1;">
+                                @TempData["BuyMissionDescription"]
+            </textarea>
+                            <!-- 添加一个可以放置图片的空间 -->
+                            <div style="margin-top: 10px;">
+                                <!-- 在这里放置图片 -->
+                                @if (ViewBag.BuyImageData != null)
+                                {
+                                    <img src="@ViewBag.BuyImageData" alt="Image from Session" alt="Uploaded Image" style="width:150px" />
+                                }
+                            </div>
+                        </div>
+                    </div>
+                    <br><br>
+                </div>
+                <!-- 右邊 -->
+                <div class="col-md-6" style="font-size: 25px;">
+                    <!-- 標籤 -->
+                    <div style="padding-top: 90px;padding-left: 370px;">
+                        <button class="capsule-button"><strong>#@TempData["BuyTags"]</strong></button>
+                    </div>
+                    <br><br>
+                    <!-- 截止時間 -->
                     @{
                         DateTime DeadlineDate;
                         TimeSpan DeadlineTime;
@@ -120,29 +125,30 @@
                             }
                         }
                     }
-                        <div style="padding-top:20px;">
+                    <div style="padding-top:20px;">
                         <img src="./img/alarm.svg" alt="">案件截止時間:<span style="color:orange;">@ViewBag.CombinedDateTime</span>
-                        </div>
-                        <!-- 任務金額 -->
-                        <div>
-                            <img src="./img/payments_FILL0_wght400_GRAD0_opsz24.svg" alt="">任務金額:<span>@TempData["BuyMissionAmount"]</span>
-                        </div>
-                        <!-- 配送地點 -->
-                        <div>
-                            <img src="./img/map-pin.svg" alt="">配送地點:
-                            <p style="color:orange;">@TempData["BuyLocationCity"]/@TempData["BuyLocationDistrict"]</p>
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3615.492929605777!2d121.5397518!3d25.0173405!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a98bcdf68a9b%3A0x8078d7b38c3ed495!2z6bql55W25YueLeWPsOWMl-WPsOWkp-mkkOW7sw!5e0!3m2!1szh-TW!2stw!4v1695696652172!5m2!1szh-TW!2stw" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                        </div>
-                        <!-- 接單 -->
-                        <div style="padding-left: 370px;">
+                    </div>
+                    <!-- 任務金額 -->
+                    <div>
+                        <img src="./img/payments_FILL0_wght400_GRAD0_opsz24.svg" alt="">任務金額:<span>@TempData["BuyMissionAmount"]</span>
+                    </div>
+                    <!-- 配送地點 -->
+                    <div>
+                        <img src="./img/map-pin.svg" alt="">配送地點:
+                        <p style="color:orange;">@TempData["BuyLocationCity"]/@TempData["BuyLocationDistrict"]</p>
+                        @* 地圖放置 *@
+                        <div id="map" style="height: 400px; width: 100%;"></div>
+                    </div>
+                    <!-- 接單 -->
+                    <div style="padding-left: 370px;">
                         <button type="button" id="updateMissionButton" class="btn btn-primary mt-3" style="background-color: #4B3DE7;font-size: 25px;">接單</button>
-                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-1"></div>
         </div>
-        <div style="display:none">
+        <div class="col-md-1"></div>
+    </div>
+    <div style="display:none">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <input type="hidden" asp-for="MissionId" value="@TempData["BuyMissionId"]" />
         @* 要改變----------------------- *@
@@ -162,8 +168,35 @@
             <span asp-validation-for="AcceptTime" class="text-danger"></span>
         </div>
         <script>
+            // 地圖api
+            function initialize() {
+                var mapOptions = {
+                    zoom: 15,
+                    center: { lat: 25.0173405, lng: 121.5397518 }  // 台北市的預設經緯度
+                };
+                map = new google.maps.Map(document.getElementById('map'), mapOptions);
+            }
+            function geocodeAddress() {
+                var geocoder = new google.maps.Geocoder();
+                var address = "@TempData["BuyLocationCity"]" + " " + "@TempData["BuyLocationDistrict"]";  // 這裡填入您的縣市和地區字串
+                geocoder.geocode({ 'address': address }, function (results, status) {
+                    if (status === 'OK') {
+                        map.setCenter(results[0].geometry.location);
+                        new google.maps.Marker({
+                            map: map,
+                            position: results[0].geometry.location
+                        });
+                    } else {
+                        alert('Geocode was not successful for the following reason: ' + status);
+                    }
+                });
+            }
+            window.onload = function () {
+                initialize();  // 初始化地圖
+                geocodeAddress();  // 進行地理編碼
+            };
 
-
+            //post-ajax
             document.addEventListener("DOMContentLoaded", function () {
                 const updateMissionButton = document.getElementById("updateMissionButton");
 
@@ -200,13 +233,13 @@
 
         </script>
 
-        </div>
+    </div>
     @section Scripts {
         @{
             await Html.RenderPartialAsync("_ValidationScriptsPartial");
         }
     }
-    
+
 </body>
 
 </html>
