1017_12:00 1.調整Login版面 2.註冊會員加條件(is-invalid) 3.寄信增加說明 4.調整日曆顏色

--- a/PaiPaiGO/Views/CC_Members/FullCalendar.cshtml
+++ b/PaiPaiGO/Views/CC_Members/FullCalendar.cshtml
@@ -67,6 +67,31 @@
 		background: white;
 		color: black;
 	}
+	/* 日期數字顏色 */
+	.fc-daygrid-day-number,
+	.fc-col-header-cell-cushion {
+		color: rgb(170, 102, 114);
+		text-decoration: none;
+		font-size: 20px;
+	}
+
+	/* 改事件的文字顏色 */
+	.fc-event-title {
+		color: black;
+		font-size: 20px;
+	}
+
+	.fc-daygrid-day {
+		height: 10px;
+	}
+
+	.fc-day-grid-event {
+		height: 10px;
+	}
+
+	.fc-toolbar-chunk {
+		font-size: 20px;
+	}
 </style>
 
 
