--- a/PaiPaiGO/Views/CC_Members/Login.cshtml
+++ b/PaiPaiGO/Views/CC_Members/Login.cshtml
@@ -33,17 +33,19 @@
                     </div>
                 </div>
 
-                <!-- 記住帳號、忘記密碼 -->
-                <div class="d-flex mt-3 justify-content-end fs-5">
-@*                    <label><input type="checkbox">記住帳號</label>*@
-                    <a href="/CC_Members/ForgotPassword">忘記密碼</a>
-                </div>
+                <!-- 忘記密碼 -->
+                
+                    
+                
 
 
                 <!-- 登入按鈕 -->
                 <button class="rounded mt-3 border-0 w-100 bg-info fs-5" type="submit">登入</button>
-                <!-- 註冊連結 -->
-                <div class="d-flex mt-3 justify-content-between fs-5">還沒有帳號嗎?<p><a href="/CC_Members/Resgister">立即註冊</a></p></div>
+				<!-- 註冊連結 -->
+                <div class="d-flex mt-3 justify-content-between fs-5">
+                    <a href="/CC_Members/ForgotPassword">忘記密碼</a>
+                    <div>還沒有帳號嗎?<a href="/CC_Members/Resgister">立即註冊</a></div>
+				</div>
             </form>
         </div>
     </div>
